--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha ./tests  --reporter=nyan --exit"
+    "test": "mocha ./tests  --reporter=nyan --exit",
+    "coverage": "nyc npm test"
   },
   "keywords": [],
   "author": "",
